# Sortune

./: .env.example  .gitignore  AGENTS.md  AGENT_ONBOARDING.md  CHANGELOG.md  GEMINI.md  LICENSE  Makefile  README.md  ROADMAP.md  _version.py  album_data_example.json  artist_data_example.json  clean_changelog.sh  cliff.toml  get_playlist_songs.py  hello.py  import_yt.py  labels.json  list_playlists.py  playlist_data_example.json  pyproject.toml  suggest_playlist_names.py  track_data_example.json
.github/: pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  release.yml  task.yml
.github/workflows/: ci.yml  publish-release.yml  release-drafter.yml  release-from-tag.yml
.windsurf/workflows/: genrate-commit-message.md
apps/api/: pyproject.toml
apps/api/sortune_api/: __init__.py  _version.py  main.py
apps/api/sortune_api/routes/: playlists.py
apps/api/src/sortune_api/: __init__.py  main.py  settings.py
apps/api/src/sortune_api/routes/: ai.py
apps/ui/: pyproject.toml
apps/ui/streamlit_app/: app.py  pyproject.toml
apps/worker/: pyproject.toml
apps/worker/sortune_worker/: __init__.py  settings.py
apps/worker/src/sortune_worker/jobs/: __init__.py  demo.py
infra/: README.md  compose.yaml
infra/docker/: api.Dockerfile  ui.Dockerfile  worker.Dockerfile
scripts/: bootstrap_dev.py  create_v_0_1_0_issues.sh  dev.sh  enqueue_demo.py  import_yt.py  run_tests.sh
tests/: conftest.py
tests/integration/: test_api.py  test_api_smoke.py  test_playlists_live.py  test_redis_repo.py
tests/integration/api/: test_ai_endpoints.py
tests/unit/: test_model_loading.py  test_models.py  test_playlist_model_default.py  test_rules.py  test_ytmusic_client_mapping.py
tests/unit/ai/: test_config.py  test_factory_and_provider.py  test_playlist_namer.py  test_prompting.py
tools/: generate_repo_state.py
