# Root is a meta project used only for dev tooling (no code is shipped).

[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "sortune"
description = "AI-assisted YouTube Music playlist manager (monorepo: api, worker, ui, packages)"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "pytest-cov>=6.2.1",
]

# Dev tools live here so you can `uv pip install -e .[dev]`
[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "fakeredis>=2.23",
  "httpx>=0.27",
  "types-redis>=4.6.0.20240425",
  "mcp-server-git>=2025.7.1",
]

# Tell Hatch there are no packages to ship from the root.
[tool.hatch.build]
skip-include = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
# This creates a _version.py at build time so your package can expose __version__
version-file = "_version.py"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"

# ---------- Tooling configs ----------
[tool.pytest.ini_options]
pythonpath = ["apps", "packages"]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["dist", "build", ".venv", ".uv", "*_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
fixable = ["ALL"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
exclude = ["dist", "build", "\\.venv", "\\.uv"]

# (optional) uv settings
[tool.uv]
