[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sortune-api"
version = "0.1.0"
description = "Sortune FastAPI service"
requires-python = ">=3.12"

# API-specific deps. Local pkgs (sortune-core, sortune-adapters, sortune-ai)
# are installed via editable installs from the repo root using uv.
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.3",
  "redis>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sortune_api"]
