[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "sortune-api"
description = "Sortune FastAPI service"
requires-python = ">=3.12"
dynamic = ["version"]

# API-specific deps. Local pkgs (sortune-core, sortune-adapters, sortune-ai)
# are installed via editable installs from the repo root using uv.
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.3",
  "redis>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sortune_api"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "sortune_api/_version.py"
