[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "sortune-ui"
description = "Streamlit demo UI for Sortune"
requires-python = ">=3.12"
dependencies = [
  "streamlit>=1.37",
  "redis>=5.0",
]

# This app isn't imported as a library; no packages to build.
[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "streamlit_app/_version.py"
