[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4", "setuptools-scm>=8"]
build-backend = "hatchling.build"

[project]
name = "sortune-ui"
description = "Streamlit demo UI for Sortune"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
  "streamlit>=1.37",
  "redis>=5.0",
]

# This app isn't imported as a library; no packages to build.
[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.version]
# This is the correct way to specify the version file
source = "vcs"
path = "streamlit_app/_version.py"

[tool.hatch.version.vcs]
root = "../../"                # repo root relative to THIS pyproject
relative_to = "pyproject.toml" # anchor paths to this file
tag_regex = "^v(?P<version>\\d+(?:\\.\\d+){2,3}.*)$"  # accepts 3- or 4-part versions

[tool.hatch.build.hooks.vcs]
version-file = "streamlit_app/_version.py"

# For compatibility & local tools
[tool.setuptools_scm]
search_parent_directories = true
fallback_version = "0.0.0"
