[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4", "setuptools-scm>=8"]
build-backend = "hatchling.build"

[project]
name = "sortune-worker"
description = "Background worker for Sortune (RQ + Redis)"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
  "rq>=1.16",
  "redis>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sortune_worker"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "sortune_worker/_version.py"

# Lets version detection work from temp build dirs
[tool.setuptools_scm]
search_parent_directories = true
fallback_version = "0.0.0"
