[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4", "setuptools-scm>=8"]
build-backend = "hatchling.build"

[project]
name = "sortune-worker"
description = "Background worker for Sortune (RQ + Redis)"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
  "rq>=1.16",
  "redis>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sortune_worker"]

[tool.hatch.version]
source = "vcs"
path = "sortune_worker/_version.py"

[tool.hatch.version.vcs]
root = "../../"                # repo root relative to THIS pyproject
relative_to = "pyproject.toml" # anchor paths to this file
tag_regex = "^v(?P<version>\\d+(?:\\.\\d+){2,3}.*)$"  # accepts 3- or 4-part versions

[tool.hatch.build.hooks.vcs]
version-file = "sortune_worker/_version.py"

# Lets version detection work from temp build dirs
[tool.setuptools_scm]
search_parent_directories = true
fallback_version = "0.0.0"
