[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sortune-ui"
version = "0.1.0"
description = "Streamlit demo UI for Sortune"
requires-python = ">=3.12"
dependencies = [
  "streamlit>=1.37",
  "redis>=5.0",
]

# This app isn't imported as a library; no packages to build.
[tool.hatch.build.targets.wheel]
packages = []
